Improved api connection and vuex structure

--- a/demo/.env
+++ b/demo/.env
@@ -1,3 +1,4 @@
-REKON_SERVER=localhost
+# VUE_APP_ is necessary for vue+dotenv to work.
+VUE_APP_REKON_SERVER=rekon-master.localhost
 
-REKON_SERVERPORT=3000
+VUE_APP_REKON_SERVERPORT=80
