Halfway to adding a put stop

--- a/demo/.env
+++ b/demo/.env
@@ -2,3 +2,7 @@
 VUE_APP_REKON_SERVER=rekon-master.localhost
 
 VUE_APP_REKON_SERVERPORT=80
+
+# VUE_APP_REKON_SERVER=localhost
+
+# VUE_APP_REKON_SERVERPORT=50654
