--- a/demo/package.json
+++ b/demo/package.json
@@ -21,7 +21,9 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/jest": "^23.1.4",
+    "@types/papaparse": "^4.5.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-pwa": "^3.0.5",
     "@vue/cli-plugin-typescript": "^3.0.5",
