Updated env to also include http/https

--- a/demo/.env.production
+++ b/demo/.env.production
@@ -1,4 +1,4 @@
 # VUE_APP_ is necessary for vue+dotenv to work.
-VUE_APP_REKON_SERVER=rekon-master.resolved.site
+VUE_APP_REKON_SERVER=https://rekon-master.resolved.site
 
 VUE_APP_REKON_SERVERPORT=80
