--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -14,3 +14,4 @@ RUN npm run build
 FROM nginx:alpine
 COPY default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/dist /usr/share/nginx/html/
+CMD ["nginx", "-g", "daemon off;"]
